# Autograd

./: .gitignore  Autograd.sln  CMakeLists.txt  Gector.h  GradFunc.h  Makefile  NGector.h  Operation.h  func_minimize.cpp  gtests.cpp  main.cpp  tests.cpp
Autograd/: Autograd.vcxproj  Autograd.vcxproj.filters  Dependency.h  Gector.h  GradFunc.h  NGector.h  Operation.h  Shape.h  Source.cpp  Test.cpp  Tests.h  func_minimize.cpp  main.cpp  tests.cpp  x.txt  xs.txt  y.txt  ys.txt
